samples/_failures_safe/1761410957_4a0c9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfe57c7c.c: In function ‘main’:
./samples/SAFE/__tmp_bfe57c7c.c:137:16: error: missing terminating " character
  137 |         printf("2
      |                ^~
./samples/SAFE/__tmp_bfe57c7c.c:137:9: error: expected expression at end of input
  137 |         printf("2
      |         ^~~~~~
./samples/SAFE/__tmp_bfe57c7c.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bfe57c7c.c:137:9: error: expected declaration or statement at end of input
